--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,10 +2,10 @@
     max-width: 800px;
     background-color: white;
     border: 1px solid rgba(150, 112, 243, 0.2);
-border-radius: 10px;
-margin: 40px auto;
-padding: 30px 40px;
-text-align: left;
+    border-radius: 10px;
+    margin: 40px auto;
+    padding: 30px 40px;
+    text-align: left;
 }
 
 .Dictionary h1 {
@@ -13,15 +13,39 @@ text-align: left;
 }
 
 .Dictionary .search-form {
-width: 100%;
-margin-top: 15px;
-padding: 10px 15px;
-border-radius: 10px;
-border: 1px solid grey;
+    width: 100%;
+    margin-top: 15px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid grey;
 }
 
 .Dictionary .form-footnote {
     font-size: 12px;
     margin-top: 10px;
+    opacity: 0.8;
+}
+
+.Meaning p {
+    margin-bottom: 5px;
+}
+
+.Meaning .partOfSpeech {
+    margin-top: 20px;
+    color: #9670F3;
+    font-weight: bold;
+}
+
+.Synonyms {
+    list-style: none;
+    padding: 0;
+}
+
+.Synonyms .synonyms-box {
+    background-color: rgba(150, 112, 243, 0.2);
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin-right: 8px;
+    font-size: 14px;
     opacity: 0.8;
 }
