Styled the application

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,26 +1,31 @@
-.Dictionary {
+.Dictionary section {
     max-width: 800px;
-    background-color: white;
     border: 1px solid rgba(150, 112, 243, 0.2);
     border-radius: 10px;
-    margin: 40px auto;
-    padding: 30px 40px;
+    margin: 10px auto;
+    padding: 25px 30px;
+    background-color: white;
+    box-shadow: rgba(128, 128, 128, 0.2) 0px 2px 8px 0px;
     text-align: left;
 }
 
 .Dictionary h1 {
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .Dictionary .search-form {
     width: 100%;
-    margin-top: 15px;
+    margin-top: 10px;
     padding: 10px 15px;
     border-radius: 10px;
-    border: 1px solid grey;
+    border: 1px solid #ddd;
+    outline-style: solid;
+    outline-color: rgba(150, 112, 243, 0.1);
+    color: rgba(39, 32, 68, 0.8);
 }
 
-.Dictionary .form-footnote {
+.Dictionary .hint {
     font-size: 12px;
     margin-top: 10px;
     opacity: 0.8;
