--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  margin: 80px auto;
+  margin: 60px auto;
+  color: #272044;
+}
+
+.App-header {
+  margin-bottom: 40px;
 }
 
 .App-logo {
@@ -15,5 +20,5 @@
 }
 
 .App a {
-  color: rgb(150, 112, 243)
+  color: rgb(150, 112, 243);
 }
