--- a/src/Results.css
+++ b/src/Results.css
@@ -1,41 +1,10 @@
-.Results {
-    margin: 20px 0;
-    text-align: left;
+.Results h2 {
+    font-size: 24px;
+    line-height: 1.5;
 }
 
 .Results h3 {
-    opacity: 0.8;
+    opacity: 0.6;
     font-size: 18px;
-}
-
-.Results p {
-    font-size: 18px;
-}
-
-em {
-    opacity:0.8;
-}
-
-.Meaning p {
-    margin-bottom: 5px;
-}
-
-.Meaning .partOfSpeech {
-    margin-top: 20px;
-    color: #9670F3;
-    font-weight: bold;
-}
-
-.Synonyms {
-    list-style: none;
-    padding: 0;
-}
-
-.Synonyms .synonyms-box {
-    background-color: rgba(150, 112, 243, 0.2);
-    border-radius: 10px;
-    padding: 5px 10px;
-    margin-right: 8px;
-    font-size: 14px;
-    opacity: 0.8;
+    margin-bottom: 0;
 }
