--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
   margin: 0 auto;
 }
 
+.App-logo:hover {
+  transform: scale(1.05);
+  transition: all 150ms ease-in-out;
+}
+
 .App-footer {
   text-align: center;
   margin: 30px 0;
@@ -21,4 +26,12 @@
 
 .App a {
   color: rgb(150, 112, 243);
+  text-decoration: none;
+}
+
+.App a:hover {
+  color: #6ED9E7;
+  text-decoration: underline;
+  font-size: 15px;
+  transition: all 150ms ease-in-out;
 }
